@@ -12,8 +12,8 @@ checking for other references).
 
 Five independently deployable Maven modules plus one shared library, each with its own `pom.xml`.
 There is no parent/reactor POM — modules are built and run separately, and **`member-service`,
-`auth-service`, and `resource-service` have been upgraded and given test coverage** (see below);
-`api-gateway` and `eureka-server` are still exactly as originally generated.
+`auth-service`, `resource-service`, and `api-gateway` have been upgraded and given test
+coverage** (see below); only `eureka-server` is still exactly as originally generated.
 
 ## Commands
 
@@ -44,7 +44,7 @@ available). Don't assume `mvn test`/`mvn verify` works the same way across modul
 |---|---|---|---|
 | `member-service` | **12 unit tests, no Docker** | +9 integration tests, **needs Docker** | See below |
 | `auth-service` | **5 unit tests, no Docker** | +7 integration tests, **needs Docker** | See below |
-| `api-gateway` | **fails on JDK 17+** | same failure | See "JDK 21 incompatibility" below |
+| `api-gateway` | **2 unit tests, no Docker** | +3 integration tests, no Docker needed | See below |
 | `eureka-server` | **fails on JDK 17+** | same failure | See "JDK 21 incompatibility" below |
 | `resource-service` | **1 unit test, no Docker** | +3 integration tests, no Docker needed | See below |
 | `common` | nothing to run | nothing to run | Library, no tests |
@@ -135,10 +135,51 @@ cd resource-service && mvn test                                 # 1 test, second
 cd resource-service && mvn verify                                # +3 integration tests, no Docker needed
 ```
 
-#### JDK 21 incompatibility in the untouched services
+#### api-gateway: same Boot bump, plus a real (not just test-time) runtime bug found and fixed
 
-`api-gateway` and `eureka-server` still fail their single generated `contextLoads()` smoke test on
-this JDK with the same root cause:
+`api-gateway` got the same Boot 2.0.2 → 2.2.13 / Hoxton.SR12 bump (it was on
+`Finchley.BUILD-SNAPSHOT`, a snapshot train, before this). It's a resource server like
+`resource-service`, so it hits the same JAXB/`jaxb-impl` issue as `auth-service` — the
+`--add-opens` flag is wired into Surefire and Failsafe here too. `LoginService` was switched from
+field to constructor injection while adding its test; its `@Bean JwtAuthenticationConfig` factory
+method had to become `static` to avoid a circular self-dependency (the only bean definition for a
+constructor parameter can't depend on an instance of the bean being constructed) — a static
+`@Bean` method is invoked without needing an instance of its declaring class first.
+
+Actually running the bumped app standalone (not just its tests) surfaced a genuine dependency
+version mismatch that the test suite couldn't have caught, since both this module's and
+member-service's tests `@MockBean` away the Feign client that would trigger it:
+`spring-cloud-openfeign-core:2.2.9` (pulled in by Hoxton) transitively needs `feign-form-spring`
+built against `feign-form:3.8.0`, but both modules explicitly pinned `feign-form:3.3.0` (correct
+under the old Finchley/2.0.2 stack, stale after the bump) — Maven's nearest-wins mediation picked
+the stale pin, and the first real Feign form-encode call failed with `NoSuchMethodError` on
+`MultipartFormContentProcessor.addFirstWriter`. Fixed by bumping the pin to `3.8.0` in both
+`api-gateway/pom.xml` and `member-service/pom.xml`. The same standalone run also confirmed
+`mvn spring-boot:run` itself needs `--add-opens` on JDK 21 (not just the test JVMs) — added to
+`spring-boot-maven-plugin`'s `jvmArguments` in `api-gateway/pom.xml` (and worth doing for
+`auth-service` too if it's ever run directly rather than via an IDE/JDK-8 launch).
+
+`LoginServiceTest` (unit, mocked `OauthServiceProxy`) proves the Basic-auth header assembly that
+keeps the OAuth2 client secret off the wire to browser/mobile clients. `ApiGatewaySecurityIT`
+(real HTTP + filter chain, `OauthServiceProxy` mocked since auth-service isn't running in the
+test) proves default-deny (401 without a token), token acceptance (a valid bearer token is not
+rejected by the gateway's own security layer), and that `/login` bypasses that security layer
+entirely so a client can obtain a token in the first place. Deliberately does **not** test
+`/uaa/oauth/token` or `/member-service/signup` the same way: both are pure Zuul-proxied routes
+with no controller of their own in this app, and with Eureka disabled (as in every test here)
+Zuul can't resolve them, forwarding internally to an error dispatch that produces a 401 for
+reasons unrelated to the ignore-list — a real quirk of testing Zuul routes without a running
+Eureka, not a gap in what `/login` already proves about the ignore-list mechanism.
+
+```bash
+cd api-gateway && mvn test                                      # 2 tests, seconds, no Docker
+cd api-gateway && mvn verify                                     # +3 integration tests, no Docker needed
+```
+
+#### JDK 21 incompatibility in the untouched service
+
+`eureka-server` still fails its single generated `contextLoads()` smoke test on this JDK with the
+same root cause:
 
 ```
 IllegalStateException: Cannot load configuration class: PropertySourceBootstrapConfiguration
@@ -152,10 +193,10 @@ Spring 5.0.6 (pulled in by Boot 2.0.2) generates cglib proxies via reflection on
 `ClassLoader.defineClass`, which the JPMS module system blocks from Java 16 onward without an
 explicit `--add-opens`. A quick `-DargLine="--add-opens java.base/java.lang=ALL-UNNAMED"` did
 **not** resolve it in a direct check — this needs either JDK 8/11 (what Boot 2.0.2 actually
-targets and was never validated past) or the same kind of Boot version bump `member-service`,
-`auth-service`, and `resource-service` got (see "Why member-service, auth-service, and
-resource-service are on a different Boot version"). Confirmed by actually running each module's
-tests, not inferred from the version number alone.
+targets and was never validated past) or the same kind of Boot version bump the other four
+modules got (see "Why member-service, auth-service, resource-service, and api-gateway are on a
+different Boot version"). Confirmed by actually running its tests, not inferred from the version
+number alone.
 
 ### Running the full system locally
 
@@ -250,20 +291,20 @@ works end-to-end (401 with no token, 404 with a valid token and no matching acco
 enforced) by minting a JWT directly against a test signing key — see that test's class Javadoc for
 why it doesn't depend on `auth-service` being up.
 
-### Why member-service, auth-service, and resource-service are on a different Boot version
+### Why member-service, auth-service, resource-service, and api-gateway are on a different Boot version
 
 `member-service` was bumped from Spring Boot 2.0.2 to **2.2.13** (Spring Cloud `Hoxton.SR12`)
 specifically to get JUnit 5 as the default in `spring-boot-starter-test`, before any test suite was
 written for it — Boot 2.0.2's bundled Surefire (2.21.0) predates JUnit Platform support entirely.
-`auth-service` and `resource-service` later got the identical bump for the same reason. `api-gateway`
-and `eureka-server` remain deliberately untouched: all five modules only interoperate over
-REST/Eureka, never a shared JAR, so there's no cross-module coupling to the version bump — if the
-remaining two ever get their own test suites, expect to hit the same overrides. Two follow-on
-overrides were needed on every bumped module to make the JDK on this machine (21) actually work
-with the upgraded test stack: `mockito.version` (Boot 2.2's managed Mockito predates JDK 17+
-bytecode support) and, less obviously, `byte-buddy.version` (Boot's BOM otherwise still pins
-byte-buddy to a version too old for the overridden Mockito, which fails at mock-creation time with
-`NoClassDefFoundError`, not at build time).
+`auth-service`, `resource-service`, and `api-gateway` later got the identical bump for the same
+reason. Only `eureka-server` remains deliberately untouched: all five modules only interoperate
+over REST/Eureka, never a shared JAR, so there's no cross-module coupling to the version bump — if
+it ever gets its own test suite, expect to hit the same overrides. Two follow-on overrides were
+needed on every bumped module to make the JDK on this machine (21) actually work with the upgraded
+test stack: `mockito.version` (Boot 2.2's managed Mockito predates JDK 17+ bytecode support) and,
+less obviously, `byte-buddy.version` (Boot's BOM otherwise still pins byte-buddy to a version too
+old for the overridden Mockito, which fails at mock-creation time with `NoClassDefFoundError`, not
+at build time).
 
 ### Naming and package quirks to know about
 
